--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "@astrojs/check": "^0.3.1",
     "astro": "^3.4.4",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.1"
   }
 }
